--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==2.1.0
 django-rest-knox==4.1.0
 djangorestframework==3.9.4
 Markdown==3.1.1
+Pillow==6.1.0
 psycopg2-binary==2.8.3
 pycparser==2.19
 pytz==2019.1
