--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+autopep8==1.4.4
 cffi==1.12.3
 cryptography==2.7
 Django==2.2.2
@@ -9,6 +10,7 @@ djangorestframework==3.9.4
 Markdown==3.1.1
 Pillow==6.1.0
 psycopg2-binary==2.8.3
+pycodestyle==2.5.0
 pycparser==2.19
 pytz==2019.1
 six==1.12.0
